# SafeHouse

./: .gitignore  CMakeLists.txt  config.json
camera_scripts/: take_snapshot.sh
mobile_client/app/: build.gradle
mobile_client/app/src/androidTest/: ExampleInstrumentedTest.java
mobile_client/app/src/main/: AndroidManifest.xml
mobile_client/app/src/main/cpp/: native-lib.cpp
mobile_client/app/src/main/java/: MainActivity.java
mobile_client/app/src/main/java/client/: ClientTCP.java  (+1 more)
mobile_client/gradle/wrapper/: gradle-wrapper.properties
server/: .gitignore  .gitmodules  CMakeLists.txt  README.md  SafeHouse.sh  config.json
server/camera_scripts/: kill_stream.sh  stream.sh  take_snapshot.sh
server/documentation/: SafeHouse_communication.docx
server/src/logger/: DebugLog.cpp  DebugLog.h  ErrorLog.cpp  ErrorLog.h  InformationLog.cpp  InformationLog.h  LogInterface.cpp  LogInterface.h  Logger.h  WarningLog.cpp  WarningLog.h
server/src/main_client/: main.cpp
server/src/main_client/client_tcp/: ClientTCP.cpp  ClientTCP.h  ResponseHandlerVisitor.cpp  ResponseHandlerVisitor.h
server/src/main_client/communication_manager_client/: CommunicationManagerClient.cpp
server/src/main_client/communication_manager_client/unit_tests/: CommunicationManagerTest.cpp
server/src/main_rpi/: main.cpp
server/src/main_rpi/server_tcp/: CMakeLists.txt  ClientThreadTCP.cpp  ClientThreadTCP.h  CommandHandlerVisitor.cpp  CommandHandlerVisitor.h
server/src/packet/: ListenStreamTCP.cpp  ListenStreamTCP.h  SendStreamTCP.cpp  SendStreamTCP.h
server/src/peripherals/: AbstractState.cpp  AbstractState.h  Blinds.cpp  CMakeLists.txt  Camera.cpp  Camera.h  ErrorState.h  GPIO.cpp  IdleState.cpp  MotionSensor.cpp  MotionSensor.h  Motor.cpp  MovingState.cpp  OpenedState.h  PeriphManager.cpp  PeriphManager.h  SensorTagManager.cpp  SensorTagManager.h  TemperatureSensor.cpp
server/src/peripherals/unit_tests/: CMakeLists.txt
server/src/protocol/: AckResponse.h  AckResponseBuilder.cpp  AutomaticBlindsBuilder.cpp  AutomaticBlindsBuilder.h  AutomaticBlindsCommand.cpp  AutomaticBlindsCommand.h  BlindsDOWNBuilder.h  BlindsDOWNOnTimeBuilder.h  BlindsStatusBuilder.cpp  BlindsStatusBuilder.h  BlindsStatusResponse.cpp  BlindsStatusResponse.h  BlindsUPBuilder.h  BlindsUPCommand.h  BlindsUPOnTimeCommand.h  Command.h  CommandFactory.cpp  CommandVisitor.h  ErrorBuilder.h  ErrorResponse.cpp  ErrorResponse.h  GuardStatusBuilder.cpp  GuardStatusBuilder.h  GuardStatusCommand.cpp  GuardStatusCommand.h  GuardStatusCommandBuilder.cpp  GuardStatusCommandBuilder.h  GuardStatusResponse.cpp  GuardStatusResponse.h  MotorStatusBuilder.cpp  MotorStatusBuilder.h  MotorStatusCommand.cpp  MotorStatusCommand.h  MotorStatusCommandBuilder.cpp  MotorStatusCommandBuilder.h  PlotBuilder.cpp  PlotBuilder.h  PlotCommand.cpp  PlotCommand.h  PlotResponse.cpp  (+32 more)
server/src/time_manager/: TimeManager.cpp  TimeManager.h
server/src/utility/: BytesConverter.h  ErrorDetectingCode.h
src/main_client/: CMakeLists.txt  main.cpp
src/main_client/client_tcp/: ClientTCP.cpp  ClientTCP.h  ResponseHandlerVisitor.cpp  ResponseHandlerVisitor.h
src/main_client/communication_manager_client/: CMakeLists.txt  CommunicationManagerClient.cpp  CommunicationManagerClient.h
src/main_client/communication_manager_client/unit_tests/: CMakeLists.txt  CommunicationManagerTest.cpp
src/main_rpi/: CMakeLists.txt  main.cpp
src/main_rpi/communication_manager_rpi/: CMakeLists.txt  CommunicationManagerRpi.cpp  CommunicationManagerRpi.h
src/main_rpi/communication_manager_rpi/unit_tests/: CommunicationManagerTest.cpp
src/main_rpi/server_tcp/: CMakeLists.txt  ClientThreadTCP.cpp  ClientThreadTCP.h  CommandHandlerVisitor.cpp  CommandHandlerVisitor.h  ServerTCP.cpp  ServerTCP.h
src/main_rpi/server_tcp/unit_tests/: ServerTest.cpp
src/packet/: SendStreamTCP.cpp  SendStreamTCP.h
src/packet/unit_tests/: ListenStreamTCPTest.cpp
src/peripherals/: AbstractState.cpp  AbstractState.h  Blinds.cpp  Blinds.h  CMakeLists.txt  ClosedState.cpp  ClosedState.h  ErrorState.cpp  ErrorState.h  GPIO.cpp  GPIO.h  IdleState.cpp  IdleState.h  MotionSensor.h  Motor.cpp  Motor.h  MovingState.cpp  MovingState.h  OpenedState.cpp  OpenedState.h  PeriphManager.cpp  PeriphManager.h  Switch.cpp  Switch.h  TemperatureSensor.cpp  TemperatureSensor.h
src/peripherals/Blinds/: Blinds.cpp  Blinds.h  ErrorState.cpp
src/peripherals/StateMachine/: StateMachine.cpp  StateMachine.h
src/peripherals/unit_tests/: PeripheralsTest.cpp
src/protocol/: AckResponse.h  AuthenticateBuilder.cpp  AuthenticateBuilder.h  AuthenticateResponse.cpp  AuthenticateResponse.h  BlindsDOWNBuilder.cpp  BlindsDOWNCommand.cpp  BlindsDOWNCommand.h  BlindsDOWNOnTimeBuilder.cpp  BlindsDOWNOnTimeCommand.cpp  BlindsDOWNOnTimeCommand.h  BlindsStatusCommand.cpp  BlindsStatusCommand.h  BlindsStatusResponseBuilder.cpp  BlindsStatusResponseBuilder.h  BlindsUPBuilder.cpp  BlindsUPCommand.cpp  BlindsUPOnTimeBuilder.cpp  BlindsUPOnTimeBuilder.h  BlindsUPOnTimeCommand.cpp  CMakeLists.txt  Command.h  CommandFactory.cpp  CommandVisitor.h  ErrorBuilder.cpp  MotorStatusResponse.cpp  MotorStatusResponse.h  Response.h  ResponseFactory.cpp  ResponseVisitor.h  SnapshotBuilder.h  SnapshotCommand.h  TemperatureDemandBuilder.cpp  TemperatureDemandCommand.cpp  UserOutOfHomeBuilder.h  UserOutOfHomeCommand.cpp
src/protocol/unit_tests/: CommandFactoryTest.cpp  CommandsTest.cpp  ResponsesTest.cpp
src/utility/unit_tests/: CMakeLists.txt
temp/Boost_queues/: main  main.cpp  second_main  second_main.cpp
temp/Boost_shared_memory/: first  first.cpp  lol.txt  second  second.cpp
temp/Switch_rpi/: CMakeLists.txt  SwitchesInterface.cpp  SwitchesInterface.h  main.cpp
temp/qflightinstruments-20151118/: AUTHORS.txt  ChangeLog.txt
temp/qflightinstruments-20151118/src/: example.pro  example.pro.user.2b4a16c  moc_LayoutSquare.cpp  moc_MainWindow.cpp  moc_WidgetPFD.cpp  moc_qfi_PFD.cpp  qfi_PFD.h  qrc_qfi.cpp  ui_MainWindow.h
temp/qflightinstruments-20151118/src/example/: MainWindow.cpp  MainWindow.ui  WidgetPFD.cpp  WidgetPFD.h
(+161 files in other folders)
